2020-08-14  Karl Rackler  <rackler@apple.com>

        rdar://66995964 (REGRESSION (r265358): [ Win10 wk1 ] animations/steps-transform-rendering-updates.html is a constant failure (215454))
        Rebaseline Test - Remore test expectation.

        Unreviewed test gardening.

        * platform/wincairo/TestExpectations:

2020-08-13  Sergio Villar Senin  <svillar@igalia.com>

        [WebXR] Implement WebXRSession::updateRenderState()
        https://bugs.webkit.org/show_bug.cgi?id=213555

        Reviewed by Darin Adler.

        * platform/wpe/TestExpectations: Added a couple of tests that pass now.

2020-08-13  Carlos Garcia Campos  <cgarcia@igalia.com>

        Crash in WebCore::StyledMarkupAccumulator::traverseNodesForSerialization
        https://bugs.webkit.org/show_bug.cgi?id=199224

        Reviewed by Michael Catanzaro.

        * editing/pasteboard/copy-across-shadow-boundaries-crash-expected.txt: Added.
        * editing/pasteboard/copy-across-shadow-boundaries-crash.html: Added.

2020-08-13  Diego Pino Garcia  <dpino@igalia.com>

        [GLIB] Unreviewed test gardening. Add baseline for css3/filters/backdrop/blur-input-bounds.html.

        * platform/glib/css3/filters/backdrop/blur-input-bounds-expected.txt: Added.

2020-08-13  Andres Gonzalez  <andresg_22@apple.com>

        VoiceOver not able to invoke play button on some web sites.
        https://bugs.webkit.org/show_bug.cgi?id=215484
        <rdar://problem/62729643>

        Reviewed by Chris Fleizach.

        Expanded this test to check for all touch-related event listeners.

        * accessibility/ios-simulator/has-touch-event-listener-expected.txt:
        * accessibility/ios-simulator/has-touch-event-listener.html:

2020-08-13  Lauro Moura  <lmoura@igalia.com>

        [GTK] Gardening

        Unreviewed test gardening.

        * platform/glib/TestExpectations: Missing debug guard.
        * platform/gtk/TestExpectations:

2020-08-13  Darin Adler  <darin@apple.com>
