@@ -5,6 +5,16 @@
 
         Unreviewed test gardening.
 
+        * platform/wincairo/animations/steps-transform-rendering-updates-expected.txt: Added.
+        * platform/wincairo/animations/steps-transform-rendering-updates.html: Added.
+
+2020-08-14  Karl Rackler  <rackler@apple.com>
+
+        rdar://66995964 (REGRESSION (r265358): [ Win10 wk1 ] animations/steps-transform-rendering-updates.html is a constant failure (215454))
+        Rebaseline Test - Remore test expectation.
+
+        Unreviewed test gardening.
+
         * platform/wincairo/TestExpectations:
 
 2020-08-13  Sergio Villar Senin  <svillar@igalia.com>
